--- a/htdocs/Application/Add/View/Adddata/index.html
+++ b/htdocs/Application/Add/View/Adddata/index.html
@@ -49,7 +49,7 @@
 			<form class="form-horizontal " method="post" action="__URL__/oadddate" enctype="multipart/form-data">
 				<div class="form-group">
 					<label>姓名</label>
-					<input type="text" class="form-control" placeholder="" name="name">
+					<input type="text" class="form-control" placeholder="" name="name" value="">
 				</div>
 				<div class="form-group">
 					<label>标题</label>
@@ -74,7 +74,7 @@
 				<div class="form-group">
 					
 					<label>年代</label>
-					<input id="oniandai" type="text" class="form-control" placeholder=""  name="niandai" />
+					<input id="oniandai" type="text" class="form-control" placeholder=""  name="niandai" value=""/>
 					<!--<select id="cniandai" type="text" class="form-control">
 						<option>唐</option>
 						<option>宋</option>
