--- a/htdocs/Application/Add/View/Addjiaocheng/index.html
+++ b/htdocs/Application/Add/View/Addjiaocheng/index.html
@@ -81,6 +81,14 @@
 					<label>预览图</label>
 					<input id="cyimg" type="text" class="form-control" placeholder="" name="yimg">
 				</div>
+				<div class="form-group">
+					<label>来源</label>
+					<input id="cyimg" type="text" class="form-control" placeholder="" name="link_name">
+				</div>
+				<div class="form-group">
+					<label>原文链接</label>
+					<input id="cyimg" type="text" class="form-control" placeholder="" name="jc_link">
+				</div>
 
 				<div class="form-group">
 				</div>
